Fix scroll to top and overflow issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,6 @@ html,
 body {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
   width: 100%;
   height: 100%;
 }
